# Tcc.Grupo31

./: .gitignore
Backend/: Backend.slnx  docker-compose.yml
Backend/Api/: Api.csproj  Dockerfile  Program.cs  appsettings.Development.json  appsettings.json
Backend/Api/Controllers/: RoutesController.cs  SensorsController.cs
Backend/AppHost/: AppHost.cs  AppHost.csproj
Backend/Application/: Application.csproj
Backend/Consumer/: Consumer.csproj  Dockerfile  Program.cs  Worker.cs  appsettings.Development.json  appsettings.json
Backend/Domain/Entities/: GraphEdge.cs  (+5 more)
Backend/GraphImporter/: GraphImporter.csproj  OsmGraphImporter.cs  Program.cs  appsettings.json
Backend/GraphImporter.Tests/: CollectionRoutingFlowTests.cs  GraphImporter.Tests.csproj  OsmGraphImporterTests.cs  SensorRegistrationFlowTests.cs
Backend/Infrastructure/: Infrastructure.csproj
Native/Abstractions/: DesktopFeeder.h  EspFeeder.h  Feeder.h  Gateway.h  MqttGateway.h  Reader.h  main.cpp
Native/Contacts/: ProvisioningDto.h  Reading.h  ReadingDto.h
Native/Platform/Esp32/main/: CMakeLists.txt  idf_component.yml  main.cpp
Native/Platform/Esp32/main/app/: app_context.h  app_dispatcher.cpp  app_dispatcher.h  app_events.h  app_state.h
Native/Platform/Esp32/main/provisioning/: provisioning_ble_transport.cpp  provisioning_transport.h
Native/Platform/Esp32/main/states/: error_state.cpp  error_state.h  operational_state.cpp  operational_state.h  provisioning_state.cpp  provisioning_state.h  wifi_state.cpp  wifi_state.h
Native/Platform/Esp32/main/storage/: config_store.cpp  config_store.h
(+100 files in other folders)
